<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker</name>
  <version>0.0.0</version>
  <description>ROS2 Package implementing walker which obeys state design pattern to move forward avoid obstacles by rotating</description>
  <maintainer email="amoghats@umd.edu">Amogha Sunil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
